--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html> 
     <head> 
 <title>My Personal Introduction</title>
-<style>body {background: color 214F 65px; } 
-h1 {color: 445fa 6px; }
-p {color: 5672ca} </style>
+<style>body {background-color:92496E} 
+h1 {color:1F7269}
+p {color:932533} </style>
 </head> 
 <body><h1>My name is Donald</h1>
 <p>I am a student at Wake Tech. I am currently studying Information Technology. In my free time, I enjoy watching sports.</p>
