--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html> 
     <head> 
 <title>My Personal Introduction</title>
-<style>body {background-color:#92496E;} 
+<style>body {background-color:#959FB8;
+            } 
 h1 {color:#1F7269;}
 p {color:#932533;} </style>
 </head> 
